--- a/News&Offerte.html
+++ b/News&Offerte.html
@@ -131,7 +131,7 @@
             </div>
             <div class="col fs-3">
                 <strong>
-                    <p class="titoloNews text-start">SOMNICARDS!</p>
+                    <p class="titoloNews text-start mt-5">SOMNICARDS!</p>
                 </strong>
                 <p class="descrizione text-start"> Scopri le carte prepagate <b>SomniCards</b>, il vantaggio è unico! Puoi
                     acquistare 5 biglietti a un prezzo davvero vantaggioso.</p>
@@ -152,7 +152,7 @@
         </div>
         <div class="row">
             <div class="col">
-                <img src="https://www.ucicinemas.it/media/content/2019/11/04/family.png" alt=""
+                <img src="https://cdn.discordapp.com/attachments/1025133315637915648/1037361086225186908/bubucard.png" alt=""
                     height="300vw" class="ImgCards mb-3 mt-3">
             </div>
             <div class="col fs-3">
