--- a/Utente privato.html
+++ b/Utente privato.html
@@ -42,13 +42,13 @@
                     <div>
                         <ul class="navbar-nav mb-2 mb-lg-0">
                             <li class="nav-item mx-2">
-                                <a class="nav-link sezione" href="#">Biglietteria</a>
+                                <a class="nav-link sezione" href="index.html">Biglietteria</a>
                             </li>
                             <li class="nav-item mx-2">
-                                <a class="nav-link sezione" href="#">Classifica</a>
+                                <a class="nav-link sezione" href="classifica.html">Classifica</a>
                             </li>
                             <li class="nav-item mx-2">
-                                <a class="nav-link sezione" href="#">News</a>
+                                <a class="nav-link sezione" href="News&Offerte.html">News</a>
                             </li>
                             <li class="nav-item mx-2">
                                 <a class="nav-link sezione" href="#">Coming soon</a>
