--- a/profilo.html
+++ b/profilo.html
@@ -48,7 +48,7 @@
                                 <a class="nav-link sezione" href="classifica.html">Classifica</a>
                             </li>
                             <li class="nav-item mx-2">
-                                <a class="nav-link sezione" href="#">News</a>
+                                <a class="nav-link sezione" href="News&Offerte.html">News</a>
                             </li>
                             <li class="nav-item mx-2">
                                 <a class="nav-link sezione" href="#">Coming soon</a>
