--- a/prenotazioni.html
+++ b/prenotazioni.html
@@ -174,7 +174,7 @@
     
     <h1 class="my-5">Prenotazioni</h1>
     <section>
-        <div class="container">
+        <div class="container"  id="containerPrenotazioni">
             <div class="row">
                 <div class="col">
                     <div class="card">
@@ -200,45 +200,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card">
-                        <img src="img/film/black_adam.jpg" class="card-img-top" alt="Fissure in Sandstone" />
-                        <div class="card-body row">
-                            <h4 class="card-title">Black Adama</h4>
-                            <div class="col text-start">
-                                <h5 class="mt-2"><i class="far fa-calendar-alt"></i> 2022/11/11</h5>
-                                <h5 class="mt-2"><i class="far fa-clock"></i> 18:30</h5>
-                                <h5 class="mt-2"><i class="fas fa-person-booth" style="color: white;"></i> Sala: 3</h5>
-                                <h5 class="mt-2"><i class="fa-solid fa-chair" style="color: white;"></i> Posto: 43</h5>
-                            </div>
-                            <div class="col">
-                                <img class="mt-2 mb-3" src="img/qr.png" alt="" style="max-width: 110px;">
-                            </div>
-                            <a href="#!" class="btn btn-primary">Button</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card">
-                        <img src="img/film/black_adam.jpg" class="card-img-top" alt="Fissure in Sandstone" />
-                        <div class="card-body row">
-                            <h4 class="card-title">Black Adama</h4>
-                            <div class="col text-start">
-                                <h5 class="mt-2"><i class="far fa-calendar-alt"></i> 2022/11/11</h5>
-                                <h5 class="mt-2"><i class="far fa-clock"></i> 18:30</h5>
-                                <h5 class="mt-2"><i class="fas fa-person-booth" style="color: white;"></i> Sala: 3
-                                </h5>
-                                <h5 class="mt-2"><i class="fa-solid fa-chair" style="color: white;"></i> Posto: 43
-                                </h5>
-                            </div>
-                            <div class="col">
-                                <img class="mt-2 mb-3" src="img/qr.png" alt="" style="max-width: 110px;">
-                            </div>
-                            <a href="#!" class="btn btn-primary">Button</a>
-                        </div>
-                    </div>
             </div>
-
 
         </div>
 
