--- a/index.html
+++ b/index.html
@@ -340,8 +340,8 @@
                             <p class="text-white-50 mb-5">Inserire email!</p>
     
                             <div class="form-outline form-white mb-4">
-                                <input type="email" id="emailLogin" class="form-control form-control-lg" />
-                                <label class="form-label" for="emailLogin">Email</label>
+                                <input type="email" id="emailRecupera" class="form-control form-control-lg" />
+                                <label class="form-label" for="emailRecupera">Email</label>
                             </div>
     
                             <button class="btn btn-outline-light btn-lg px-5" type="submit"
